@@ -10,6 +10,7 @@ EXTRA_DIST   = starspan
 
 starspan2_SOURCES =	\
 	src/starspan2.cc \
+	src/starspan_rasterize.cc \
 	src/starspan_dup_pixel.cc \
 	src/starspan_csv2.cc \
 	src/starspan_minirasters2.cc \
